sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
def cocktailSort2() {
var start = 0
var end = getNombreValeurs() -2
var inverse=false

do {
	inverse = false
	for (i<-start to end){
		if(plusPetit(i+1,i)){
			echange(i+1,i)
			inverse = true
		}
	}
	if (!inverse) 
		return
	end -=1
	for (i<-end to start by -1){
		if(plusPetit(i+1,i)){
			echange(i,i+1)
			inverse = true
		}
	}
	if (!inverse)
		return
	start +=1
}
}

}
